// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Select Basic 1`] = `
Array [
  <button
    aria-haspopup="listbox"
    aria-labelledby="select-button-4fzzzxjyl"
    className="psds-select__button psds-theme--dark"
    id="select-button-4fzzzxjyl"
    onClick={[Function]}
    onKeyDown={[Function]}
  >
    <div
      className="psds-select__button-inner"
    >
      <span
        className="psds-select__selected psds-select__placeholder psds-theme--dark"
      >
        Select item
      </span>
      <div
        className="psds-icon psds-icon--size-medium psds-select__icon psds-theme--dark"
      >
        <svg
          aria-label="caret down icon"
          role="img"
          viewBox="0 0 24 24"
        >
          <path
            d="m11.646 15.056-4.292-4.292a.5.5 0 0 1 0-.708l.703-.703a.5.5 0 0 1 .707 0L12 12.58l3.236-3.227a.5.5 0 0 1 .707 0l.703.703a.5.5 0 0 1 0 .708l-4.292 4.292a.5.5 0 0 1-.708 0z"
          />
        </svg>
      </div>
    </div>
  </button>,
  <div
    aria-live="polite"
    style={
      Object {
        "display": "none",
      }
    }
  />,
]
`;

exports[`Storyshots Components/Select Button Basic 1`] = `
<button
  className="psds-select__button psds-theme--dark"
>
  <div
    className="psds-select__button-inner"
  >
    Hello
    <div
      className="psds-icon psds-icon--size-medium psds-select__icon psds-theme--dark"
    >
      <svg
        aria-label="caret down icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="m11.646 15.056-4.292-4.292a.5.5 0 0 1 0-.708l.703-.703a.5.5 0 0 1 .707 0L12 12.58l3.236-3.227a.5.5 0 0 1 .707 0l.703.703a.5.5 0 0 1 0 .708l-4.292 4.292a.5.5 0 0 1-.708 0z"
        />
      </svg>
    </div>
  </div>
</button>
`;

exports[`Storyshots Components/Select Button Disabled 1`] = `
<button
  className="psds-select__button psds-theme--dark"
  disabled={true}
>
  <div
    className="psds-select__button-inner"
  >
    Hello
    <div
      className="psds-icon psds-icon--size-medium psds-select__icon psds-theme--dark"
    >
      <svg
        aria-label="caret down icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="m11.646 15.056-4.292-4.292a.5.5 0 0 1 0-.708l.703-.703a.5.5 0 0 1 .707 0L12 12.58l3.236-3.227a.5.5 0 0 1 .707 0l.703.703a.5.5 0 0 1 0 .708l-4.292 4.292a.5.5 0 0 1-.708 0z"
        />
      </svg>
    </div>
  </div>
</button>
`;

exports[`Storyshots Components/Select Button Error 1`] = `
<button
  className="psds-select__button psds-select__button--error psds-theme--dark"
>
  <div
    className="psds-select__button-inner"
  >
    Hello
    <div
      className="psds-icon psds-icon--size-medium psds-select__icon psds-theme--dark"
    >
      <svg
        aria-label="caret down icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="m11.646 15.056-4.292-4.292a.5.5 0 0 1 0-.708l.703-.703a.5.5 0 0 1 .707 0L12 12.58l3.236-3.227a.5.5 0 0 1 .707 0l.703.703a.5.5 0 0 1 0 .708l-4.292 4.292a.5.5 0 0 1-.708 0z"
        />
      </svg>
    </div>
  </div>
  <div
    className="psds-icon psds-icon--size-medium psds-select__error"
  >
    <svg
      aria-label="exclamation point triangle icon"
      role="img"
      viewBox="0 0 24 24"
    >
      <path
        d="M11 10.5a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v4a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5zm.5 5.5a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5z"
      />
      <path
        clipRule="evenodd"
        d="M12.433 2.747a.5.5 0 0 0-.866 0L1.434 20.25a.5.5 0 0 0 .433.751h20.266a.5.5 0 0 0 .433-.75zM12 6l7.53 13H4.47z"
        fillRule="evenodd"
      />
    </svg>
  </div>
</button>
`;

exports[`Storyshots Components/Select Button Focused 1`] = `
<button
  className="psds-select__button psds-theme--dark"
>
  <div
    className="psds-select__button-inner"
  >
    Hello
    <div
      className="psds-icon psds-icon--size-medium psds-select__icon psds-theme--dark"
    >
      <svg
        aria-label="caret down icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="m11.646 15.056-4.292-4.292a.5.5 0 0 1 0-.708l.703-.703a.5.5 0 0 1 .707 0L12 12.58l3.236-3.227a.5.5 0 0 1 .707 0l.703.703a.5.5 0 0 1 0 .708l-4.292 4.292a.5.5 0 0 1-.708 0z"
        />
      </svg>
    </div>
  </div>
</button>
`;

exports[`Storyshots Components/Select Button Is Open 1`] = `
<button
  className="psds-select__button psds-theme--dark psds-select__button--is-open"
>
  <div
    className="psds-select__button-inner"
  >
    Hello
    <div
      className="psds-icon psds-icon--size-medium psds-select__icon psds-theme--dark"
    >
      <svg
        aria-label="caret down icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="m11.646 15.056-4.292-4.292a.5.5 0 0 1 0-.708l.703-.703a.5.5 0 0 1 .707 0L12 12.58l3.236-3.227a.5.5 0 0 1 .707 0l.703.703a.5.5 0 0 1 0 .708l-4.292 4.292a.5.5 0 0 1-.708 0z"
        />
      </svg>
    </div>
  </div>
</button>
`;

exports[`Storyshots Components/Select Button Small 1`] = `
<button
  className="psds-select__button psds-select__button--small psds-theme--dark"
>
  <div
    className="psds-select__button-inner"
  >
    Hello
    <div
      className="psds-icon psds-icon--size-medium psds-select__icon psds-theme--dark"
    >
      <svg
        aria-label="caret down icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="m11.646 15.056-4.292-4.292a.5.5 0 0 1 0-.708l.703-.703a.5.5 0 0 1 .707 0L12 12.58l3.236-3.227a.5.5 0 0 1 .707 0l.703.703a.5.5 0 0 1 0 .708l-4.292 4.292a.5.5 0 0 1-.708 0z"
        />
      </svg>
    </div>
  </div>
</button>
`;

exports[`Storyshots Components/Select Custom Menu Item 1`] = `
Array [
  <button
    aria-haspopup="listbox"
    aria-labelledby="select-button-4fzzzxjyl"
    className="psds-select__button psds-theme--dark"
    id="select-button-4fzzzxjyl"
    onClick={[Function]}
    onKeyDown={[Function]}
  >
    <div
      className="psds-select__button-inner"
    >
      <span
        className="psds-select__selected psds-select__placeholder psds-theme--dark"
      >
        Select item
      </span>
      <div
        className="psds-icon psds-icon--size-medium psds-select__icon psds-theme--dark"
      >
        <svg
          aria-label="caret down icon"
          role="img"
          viewBox="0 0 24 24"
        >
          <path
            d="m11.646 15.056-4.292-4.292a.5.5 0 0 1 0-.708l.703-.703a.5.5 0 0 1 .707 0L12 12.58l3.236-3.227a.5.5 0 0 1 .707 0l.703.703a.5.5 0 0 1 0 .708l-4.292 4.292a.5.5 0 0 1-.708 0z"
          />
        </svg>
      </div>
    </div>
  </button>,
  <div
    aria-live="polite"
    style={
      Object {
        "display": "none",
      }
    }
  />,
]
`;

exports[`Storyshots Components/Select Custom Render Option 1`] = `
Array [
  <button
    aria-haspopup="listbox"
    aria-labelledby="select-button-4fzzzxjyl"
    className="psds-select__button psds-theme--dark"
    id="select-button-4fzzzxjyl"
    onClick={[Function]}
    onKeyDown={[Function]}
  >
    <div
      className="psds-select__button-inner"
    >
      <span
        className="psds-select__selected psds-select__placeholder psds-theme--dark"
      >
        Select item
      </span>
      <div
        className="psds-icon psds-icon--size-medium psds-select__icon psds-theme--dark"
      >
        <svg
          aria-label="caret down icon"
          role="img"
          viewBox="0 0 24 24"
        >
          <path
            d="m11.646 15.056-4.292-4.292a.5.5 0 0 1 0-.708l.703-.703a.5.5 0 0 1 .707 0L12 12.58l3.236-3.227a.5.5 0 0 1 .707 0l.703.703a.5.5 0 0 1 0 .708l-4.292 4.292a.5.5 0 0 1-.708 0z"
          />
        </svg>
      </div>
    </div>
  </button>,
  <div
    aria-live="polite"
    style={
      Object {
        "display": "none",
      }
    }
  />,
]
`;

exports[`Storyshots Components/Select Position Below Left 1`] = `
Array [
  <button
    aria-haspopup="listbox"
    aria-labelledby="select-button-4fzzzxjyl"
    className="psds-select__button psds-theme--dark"
    id="select-button-4fzzzxjyl"
    onClick={[Function]}
    onKeyDown={[Function]}
  >
    <div
      className="psds-select__button-inner"
    >
      <span
        className="psds-select__selected psds-select__placeholder psds-theme--dark"
      >
        Select item
      </span>
      <div
        className="psds-icon psds-icon--size-medium psds-select__icon psds-theme--dark"
      >
        <svg
          aria-label="caret down icon"
          role="img"
          viewBox="0 0 24 24"
        >
          <path
            d="m11.646 15.056-4.292-4.292a.5.5 0 0 1 0-.708l.703-.703a.5.5 0 0 1 .707 0L12 12.58l3.236-3.227a.5.5 0 0 1 .707 0l.703.703a.5.5 0 0 1 0 .708l-4.292 4.292a.5.5 0 0 1-.708 0z"
          />
        </svg>
      </div>
    </div>
  </button>,
  <div
    aria-live="polite"
    style={
      Object {
        "display": "none",
      }
    }
  />,
]
`;

exports[`Storyshots Components/Select Selected Placeholder 1`] = `
<span
  className="psds-select__selected psds-select__placeholder psds-theme--dark"
>
  placeholder
</span>
`;

exports[`Storyshots Components/Select Selected Selected 1`] = `
<span
  className="psds-select__selected psds-select__placeholder psds-theme--dark"
>
  selected
</span>
`;
